fixed colour contrast on banner

--- a/uni-sine/styles/Home.module.css
+++ b/uni-sine/styles/Home.module.css
@@ -75,10 +75,10 @@
   transition: all .2s ease-in-out;
 }
 .sign-in-link {
-  color: #76a8a8;
+  color: white;
 }
 .sign-in-link:hover {
-  color: white;
+  color: rgb(212, 212, 212);
 }
 
 .join-link:hover {
@@ -101,7 +101,7 @@
 }
 .header-content  > div > p {
   margin: 0;
-  color: #C7C7C7;
+  color: #ffffff;
   font-size: 1.2em;
 }
 
